Fixed DFL-2998: Colors in the palette should still be visible when the palette tooltip is open.

--- a/src/ui-style/colorpickerstyle.css
+++ b/src/ui-style/colorpickerstyle.css
@@ -280,6 +280,7 @@
 {
   margin: 0;
   padding: 3px 2px 1px 2px;
+  background: inherit;
 }
 
 .color-picker-palette-square
